# input_player

./: .gitignore  README.md  build_log.txt  button_mapping.json  config.json  editor-test.html  editor.html  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
config/: button_mapping.json
sample_input/: input_sample_01_input_history.csv
src/: App.css  App.tsx  BackendSettings.css  BackendSettings.tsx  ButtonMappingEditor.css  ButtonMappingEditor.tsx  ButtonMappingEditor_new.tsx  ModelConfigDialog.tsx  SequenceEditor.css  SequenceEditor.tsx  SequenceEditorWindow.tsx  SequenceSelector.css  SequenceSelector.tsx  TileClassificationDialog.tsx  TrainingDialog.css  TrainingDialog.tsx  VideoAnalyzer.css  VideoAnalyzer.tsx  api.ts  editor-main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  config.json  tauri.conf.json
src-tauri/capabilities/: default.json  editor.json
src-tauri/src/: analysis_commands.rs  controller.rs  csv_loader.rs  lib.rs  main.rs  ml_commands.rs  player.rs  types.rs
src-tauri/src/analyzer/: input_history_extractor.rs  mod.rs
src-tauri/src/ml/: inference.rs  ml_model.rs  mod.rs  training.rs
src-tauri/src/model/: config.rs  inference_config.rs  mod.rs  model_metadata.rs  model_storage.rs
src-tauri/src/video/: frame_extractor.rs  mod.rs
